@startuml

class Company{
    companyID: ID
    name: String

}
class Quiz{
    id: ID
    title: String
    description: String
}
class Category{
    id: ID
    name: String
    finished: boolean
}
class Question{
    id: ID
    text: String
    answer: Optional<String>
    mandatory: boolean
}

class QuizType{
    quizTypeId: ID
    name: String
}

Company "1" -- "*" Quiz
Quiz "1" -- "*" Category
QuizType "1" -- "*" Quiz
Category "1" -- "*" Question
@enduml
